# epf

./: CLAUDE.md  GLOSSARY.md  REVIEW.md  SOLUTION.md  app.py  backfill_weather.py  backtest.py  config.py  data_utils.py  experiment_weights.py  experiments.md  fetch_weather.py  main.py  model_clf_ne.pkl  predict.py  predictions.csv  pyproject.toml  rolling_backtest.py  train.py
.serena/: project.yml
data/: 现货交易策略导向预测方案与计划.md
data/weather/: Jiuquan.parquet  Lanzhou.parquet  Wuwei.parquet  Zhangye.parquet
docs/: analysis_report.md  data_quality_report.md  implementation.md  story.md  story2.md  talk.md
